[package]
name = "webgl-rc-example"
version = "0.1.0"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
repository = "https://github.com/monkin/webgl-rc"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
num_enum = "0.7.2"
webgl-rc = { path = "../webgl-rc", version = "0.1.8" }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "Node",
    "Window",
]
