[package]
name = "webgl-rc"
version = "0.1.0"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
repository = "https://github.com/monkin/webgl-rc"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.81"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.58"
num_enum = "0.5.7"
webgl-rc-macro = { path = "../webgl-rc-macro", version = "0.1.0" }

[dependencies.web-sys]
version = "0.3.58"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "Node",
    "Window",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "WebGlSampler",
    "WebGlActiveInfo",
    "AngleInstancedArrays",
    "ExtColorBufferHalfFloat",
    "OesTextureHalfFloat",
    "OesTextureHalfFloatLinear",
]