[package]
name = "webgl-rc"
version = "0.1.11"
authors = ["Andrei Monkin <monkin.andrey@gmail.com>"]
repository = "https://github.com/monkin/webgl-rc"
description = "WebGL wrapper with resources reference counting"
license = "MIT"
edition = "2018"

[features]
default = []
nalgebra-glm = ["dep:nalgebra-glm"]

[dependencies]
wasm-bindgen = "^0.2.92"
js-sys = "^0.3.69"
num_enum = "^0.7.2"
webgl-rc-macro = { path = "../webgl-rc-macro", version = "0.1.3" }
nalgebra-glm = { optional = true, version = "^0.18.0" }

[dependencies.web-sys]
version = "^0.3.69"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "Node",
    "Window",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlRenderbuffer",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject",
    "WebGlSampler",
    "WebGlActiveInfo",
    "AngleInstancedArrays",
    "ExtColorBufferHalfFloat",
    "OesTextureHalfFloat",
    "OesTextureHalfFloatLinear",
    "OesElementIndexUint"
]